--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -18,7 +18,7 @@ http {
     root /www/data;
     rewrite ^/move-in$ https://raw.githubusercontent.com/delqn/dotfiles/master/move_in.sh redirect;
     location / {
-      proxy_pass http://127.0.0.1:8080;
+      root /home/de/www;
     }
   }
 }
